@@ -521,3 +521,5 @@ nfqws: use wireless ext in case nl80211 does not return SSID
 v71.2
 
 nfqws: apply udp desync to replayed packets with non-zero reasm offset (except fake)
+blockcheck: display curl version and kernel version
+install_bin: stop if no binaries found. display help text.
